2004-08-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (get_menu_options):
	(do_menu):
	new menu option TearOffImmediately

2004-08-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (__place_get_wm_pos):
	cascade placemnt fix by Paul Vojta

2004-08-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/geometry.c (constrain_size):
	Don't touch the aspect ratio if modifying the width/height does not
	improve the situation

	* fvwm/frame.c (frame_free_move_resize_args):
	(__frame_setup_window):
	(frame_update_hidden_window_pos):
	(frame_mrs_resize_move_windows):
	(frame_create_move_resize_args):
	* fvwm/move_resize.c (__resize_window):
	some event handling fixes

	* fvwm/geometry.c (constrain_size):
	look up the latest size hints if necessary

2004-08-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/geometry.c (constrain_size):
	* fvwm/ewmh.c (EWMH_fullscreen):
	* fvwm/window_flags.h (DO_DISABLE_CONSTRAIN_SIZE_FULLSCREEN):
	(SET_DISABLE_CONSTRAIN_SIZE_FULLSCREEN):
	(SETM_DISABLE_CONSTRAIN_SIZE_FULLSCREEN):
	* fvwm/fvwm.h (window_flags_t):
	allow windows to override their size hints when going fullscreen:
	minimum and maximum size, size inc, aspect ratio, etc.

2004-08-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/decorations.c (struct):
	MWM hints on 64 bit machines fix

2004-07-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in (Note):
	* fvwm/read.c (CMD_Read):
	(CMD_PipeRead):
	the Read and PipeRead commands have a return code

	* fvwm/read.c (run_command_stream):
	(CMD_Read):
	(CMD_PipeRead):
	removed debug code

2004-07-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (GetResizeArguments):
	(GetMoveArguments):
	fixed parsing of the frame option to the resize command and the pointer
	option to the move command

	* fvwm/conditional.c (CMD_None):
	Fixed CMD_None return code

2004-07-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (is_above_unmanaged):
	windows on other Desks are always considered on top
