@@ -1,3 +1,9 @@
+2004-08-25  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (__handle_cr_on_client):
+	don't reevaluate window geometry when a ConfigureRequest has no size or
+	position set
+
 2004-08-20  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (get_menu_options):
